--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p>ClinBench-HPB, a clinically oriented benchmark designed to assess the  knowledge and practical diagnostic capabilities of large language models (LLMs) in Hepato-Pancreato-Biliary (HPB) diseases. </p>
         <p>For more details about ClinBench-HPB, please refer to this paper:</p>
         <p class="text-center">
-          <a href="https://arxiv.org/abs/1909.06146"><button type="button" class="btn btn-info">ClinBench-HPB Paper</button></a>
+          <a href="https://arxiv.org/abs/2506.00095"><button type="button" class="btn btn-info">ClinBench-HPB Paper</button></a>
         </p>
         </div>
         <div class="list-group-item"><h4>Dataset</h4>
@@ -82,12 +82,14 @@
         <div class="list-group-item"><h4>Citation</h4>
         <p>If you use ClinBench-HPB in your research, please cite our paper by:</p>
         <pre>
-@inproceedings{latex reference,
+@misc{li2025clinbenchhpbclinicalbenchmarkevaluating,
   title={ClinBench-HPB: A Clinical Benchmark for Evaluating LLMs in Hepato-Pancreato-Biliary Diseases},
   author={Yuchong Li, Xiaojun Zeng, Chihua Fang, Jian Yang, Fucang Jia},
-  booktitle={xx},
-  pages={xx},
-  year={2025}
+  year={2025},
+  eprint={2506.00095},
+  archivePrefix={arXiv},
+  primaryClass={cs.CY},
+  url={https://arxiv.org/abs/2506.00095}, 
 }</pre>
     </div>
   </div>
